# cutout

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  flake.nix  garnix.yaml  worker-shim.mjs  wrangler.local.toml  wrangler.toml
.github/workflows/: deploy.yml  docs.yml
doc/: deploy.html  deploy.md  how-it-works.html  index.html  setup.html  setup.md  style.css
migrations/: 0000_durable_storage.sql  0000_init.sql
scripts/: build.sh
src/: bots.rs  db.rs  dlq.rs  events.rs  helpers.rs  kv.rs  lib.rs  r2.rs  retries.rs  sanitize.rs  screenshot.rs  stats.rs  types.rs  validation.rs  verify.rs
src/email/: forward.rs  handler.rs  mime.rs  mod.rs  routing.rs  send.rs
src/manage/: access.rs  handlers.rs  mod.rs  templates.rs  viewer.rs
